quote section fully aligned fixed with flex-box

--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,23 @@ section.card-section .container .cards .card {
 }
 /* CARD section */
 
+/* QUOTE section */
+section.quote-section {
+  background-color: var(--quote-background-color)
+}
+
+section.quote-section .container .quote-content .quote {
+  font-size: clamp(1rem, 3vw, 1.3rem);
+  color: var(--quote-text-color);
+  font-style: italic;
+}
+
+section.quote-section .container .quote-content .author {
+  font-weight: bold;
+  font-size: clamp(0.9rem, 3vw, 1.rem);
+}
+/* QUOTE section */
+
 
 /* Desktop Responsive */
 @media (min-width: 750px) {
@@ -199,6 +216,23 @@ section.card-section .container .cards .card {
     gap: 1rem;
   }
   /* card section */
+
+  /* QUOTE SECTION */
+  section.quote-section {
+    padding: 5.5rem 0;
+  }
+
+  section.quote-section .container .quote-content{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 0 .5rem;
+  }
+
+  section.quote-section .container .quote-content .author {
+    align-self: flex-end;
+  }
+  /* QUOTE SECTION */
 }
 /* Desktop Responsive */
 
@@ -331,9 +365,26 @@ section.card-section .container .cards .card {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    width: 100%;
   }
   /* card section */
 
+
+  /* quote section */
+  section.quote-section {
+    padding: 3rem .3rem;
+  }
+
+  section.quote-section .container .quote-content {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  section.quote-section .container .quote-content .author {
+    align-self: flex-end;
+  }
+  /* quote section */
 
 
 }
